--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -63,6 +63,8 @@
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/",
     "globalSetup": "./src/testUtils/callSetup.js",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
