--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -8,15 +8,16 @@
     "build": "rimraf ./dist && tsc"
   },
   "devDependencies": {
+    "@types/node": "^10.3.2",
+    "@types/react": "^16.3.17",
+    "@types/react-dom": "^16.0.6",
     "rimraf": "^3.0.2",
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
-    "@types/node": "^10.3.2",
-    "@types/react": "^16.3.17",
-    "@types/react-dom": "^16.0.6"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.43",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
