--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.1.0",
     "yup": "^0.28.3",
-    "@backyard-borrow/common": "^1.0.0",
+    "@backyard-borrow/shared": "^1.0.0",
     "@backyard-borrow/controller": "^1.0.0"
   },
   "scripts": {
