--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "build:server": "lerna run build --scope={@backyard-borrow/shared,@backyard-borrow/server}"
+        "build:server": "lerna run build --scope={@backyard-borrow/shared,@backyard-borrow/server}",
+        "build:client": "lerna run build --scope={@backyard-borrow/shared,@backyard-borrow/client}"
     },
     "workspaces": {
         "packages": [
