--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,8 +17,8 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "formik": "^2.1.4",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.1.0",
     "yup": "^0.28.3",
