--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.43",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
   }
 }
